--- a/alice infopage.html
+++ b/alice infopage.html
@@ -17,7 +17,7 @@
 </p>
 <hr>
 <h2>The Author's set up</h2>
-<img src="C:\Users\Storm\OneDrive\Pictures\Alice Rifle.jpg" width="700" height="300">
+<img src="Pictures/AliceRifle.jpg" width="700" height="300" alt="Author's setup">
 <p>
     This setup is multipurpose as it can be used for both Airsoft and real steel
     which is jargon for actual firearms, but for this specific example, we
@@ -56,11 +56,13 @@
 </p>
 
 <h2>Alice Clip aka "slide keepers"</h2>
-<img src="C:\Users\Storm\OneDrive\Pictures\Alice clip.jpg" width="300" height="300">
+<img src="Pictures/AliceClip.jpg" width="300" height="300" alt="Alice Clip">
 
 <h3>Want to learn more? Click the links here.</h3>
+ 
+<a href="//en.wikipedia.org/wiki/All-purpose_Lightweight_Individual_Carrying_Equipment"> Alice Basic info</a>
 
-<a>https://en.wikipedia.org/wiki/All-purpose_Lightweight_Individual_Carrying_Equipment</a>
 
-<a>https://www.ccmilitary.com/blogs/resources/a-fasten-ating-story-about-alice-molle</a>
+<a href="https://www.ccmilitary.com/blogs/resources/a-fasten-ating-story-about-alice-molle"> Alice Extended Info</a>
+
 </html>
