--- a/alice infopage.html
+++ b/alice infopage.html
@@ -65,4 +65,8 @@
 
 <a href="https://www.ccmilitary.com/blogs/resources/a-fasten-ating-story-about-alice-molle"> Alice Extended Info</a>
 
+
+<p>
+&#169; This website is copyrighted by Gabriel Collins, the Author 
+</p>
 </html>
