--- a/aliceinfopageMKI.html
+++ b/aliceinfopageMKI.html
@@ -5,11 +5,8 @@
     <meta Charset="utf-8">
     <title> The basics of Alice LC-2 </title>
 </head>
-<header>
-<h1>The Basics of Alice LC-2 </h1>
-</header>
 
-<main>
+<h1>The Basics of Alice LC-2 </h1>
 <p>
     All Purpose Lightweight Individual Carrying Equipment or Alice is a
     type of belt and suspenders load bearing equipment used by the United
@@ -18,10 +15,7 @@
     out there, its cost effectiveness and durability makes it a perfect choice for those 
     on a budget, or if you have a lot of people on your team to equip. 
 </p>
-
 <hr>
-<nav> <a href=aliceinfopage2.html> How to Use </a></nav>
-
 <h2>The Author's set up</h2>
 <img src="Pictures/AliceRifle.jpg" width="700" height="300" alt="Author's setup">
 <p>
@@ -43,9 +37,27 @@
         not use the Flashlight so it doesn't get shot out by a BB </li>
 
 </ul>
-</main>
  <hr>
-<footer>
+<p>
+    This system is modular for all of you milsimmers out there. Any Alice 
+    pouch will fit securely on this system thanks to the slide keepers, which are
+    actually a carry over from the M1956 and M1967 canvas rigs from the vietnam era.
+    Due to this fact, any pouch from the two previous systems will work with Alice
+    seamlessly, in fact the butt pack was a carry over from the previous, however is not
+    pictured here. Alice is a nylon, while the other two are a cotton canvas,
+    which while durable traps water when wet and gets heavy, Alice doesn't have
+    this problem. Another item that will work with alice is the LBV-88 (Load Bearing Vest 88)
+    which was designed to improve and use Alice in the 1990's and replace the older Y straps. 
+    While you could use this vest by itself, it works better with an Alice belt. The LBV 88 holds
+    six M4 pattern magazines and two grenade pouches (if you can afford Pyrotechnic grenades as the Co2
+    grenades will not fit) so if you set it up right, you could double your ammunition count, which 
+    for milsim events, longer running skirmish games, or just a game that gets extremely hot and contested
+    the more magazines the better. 
+</p>
+
+<h2>Alice Clip aka "slide keepers"</h2>
+<img src="Pictures/AliceClip.jpg" width="300" height="300" alt="Alice Clip">
+
 <h3>Want to learn more? Click the links here.</h3>
  
 <a href="//en.wikipedia.org/wiki/All-purpose_Lightweight_Individual_Carrying_Equipment"> Alice Basic info</a>
@@ -53,7 +65,7 @@
 
 <a href="https://www.ccmilitary.com/blogs/resources/a-fasten-ating-story-about-alice-molle"> Alice Extended Info</a>
 
-</footer>
+
 <p>
 &#169; This website is copyrighted by Gabriel Collins, the Author 
 </p>
