--- a/alice infopage.html
+++ b/alice infopage.html
@@ -1,15 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
 
+
 <head>
     <meta Charset="utf-8">
     <title> The basics of Alice LC-2 </title>
+    <link rel="stylesheet" href="mystyle.css"> 
+    
 </head>
 <header>
 <h1>The Basics of Alice LC-2 </h1>
 </header>
 
 <main>
+    
 <p>
     All Purpose Lightweight Individual Carrying Equipment or Alice is a
     type of belt and suspenders load bearing equipment used by the United
@@ -31,6 +35,7 @@
     setup, starting from left to right, consisting of
 </p>
 
+<img src="Pictures/magpouch.jpg"> 
 <ul>
     <li>Two magazine pouches with grenade pouches holding three 30 round
         STANAG magazines each or three airsoft M4 pattern magazines. One on each side! </li>
@@ -57,4 +62,5 @@
 <p>
 &#169; This website is copyrighted by Gabriel Collins, the Author 
 </p>
+
 </html>
