--- a/aliceinfopage2.html
+++ b/aliceinfopage2.html
@@ -4,10 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Alice Set Up</title>
+    <link rel="stylesheet" href="mystyle.css"> 
 </head>
 
 <header><h1>Setting Up Alice LC-2</h1></header>
 <body>
+
+
     <p>
         This system is modular for all of you milsimmers out there. Any Alice 
         pouch will fit securely on this system thanks to the slide keepers, which are
@@ -39,6 +42,8 @@
     </ul>
     </p>
 
+    <h2>LBV-88E Vest</h2>
+<img src="Pictures/LBV88.gif" alt="LBV-88 Vest">
     <p> If you decide to use the LBV-88 vest, here are some things you will want to know. Each vest comes with four magazine pouches
         with two on each side. the top pouch can hold two STANAG magazines while the bottom pouch only holds one, leading to a total capacity of six magazines
         plus the one in your weapon, which allows the same 210 round loadout as the Alice but more compacted, but if you keep the 3 mag pouches you can carry even more
