alice AGAIN TAKE I DONT KNOW

--- a/alice infopage.html
+++ b/alice infopage.html
@@ -35,7 +35,7 @@
     setup, starting from left to right, consisting of
 </p>
 
-<img src="Pictures/magpouch.jpg"> 
+<img src="Pictures/magpouch.jpg" alt="Mag Pouch"> 
 <ul>
     <li>Two magazine pouches with grenade pouches holding three 30 round
         STANAG magazines each or three airsoft M4 pattern magazines. One on each side! </li>
