--- a/alice infopage.html
+++ b/alice infopage.html
@@ -18,10 +18,11 @@
     All Purpose Lightweight Individual Carrying Equipment or Alice is a
     type of belt and suspenders load bearing equipment used by the United
     States from 1973 to around 2006 but don't let age fool you, the old girl is still
-    viable option for civilian use. While it may not be the most high spped, or fancy tactical gear 
+    viable option for civilian/militia use. While it may not be the most high spped, or fancy tactical gear 
     out there, its cost effectiveness and durability makes it a perfect choice for those 
-    on a budget, or if you have a lot of people on your team to equip. 
-</p>
+    on a budget, if you have a lot of people on your team to equip, or are more interested in retro 
+    setups like those used in Operation Gothic Serpent (battle of Mogadishu) or literally any conflict the 
+    United States has been invovled in since 1973 up to the middle of the Great War On Terror or GWOT. 
 
 <hr>
 <nav> <a href=aliceinfopage2.html> How to Use </a></nav>
@@ -30,22 +31,22 @@
 <img src="Pictures/AliceRifle.jpg" width="700" height="300" alt="Author's setup">
 <p>
     This setup is multipurpose as it can be used for both Airsoft and real steel
-    which is jargon for actual firearms, but for this specific example, we
-    are going to use airsoft. This is what could be reffered to as a riflemans
-    setup, starting from left to right, consisting of
+    which is jargon for actual firearms, we will be using both interchangably. This is what could be reffered to as a riflemans
+    setup at most airsoft fields, or as a typical infantry setup for those it should concern. Starting from left to right, consisting of
 </p>
 
 <img src="Pictures/magpouch.jpg" alt="Mag Pouch"> 
 <ul>
     <li>Two magazine pouches with grenade pouches holding three 30 round
-        STANAG magazines each or three airsoft M4 pattern magazines. One on each side! </li>
-    <li>One US M12 Universal Holster with KWA M9 PTP but can also hold an M1911</li>
-    <li>One butt pack which should be used for sustainment</li>
+        STANAG magazines each or three airsoft M4 pattern magazines in which case capacity will vary</li>
+    <li>One US M12 Universal Holster with KWA M9 PTP but can also hold an M1911 or most other pistols with a 5 inch barrel</li>
+    <li>One butt pack which should be used for sustainment for long events, such as snacks</li>
     <li>One SAW gunners pouch, being used as a dump pouch for spent mags</li>
     <li>One M3 clip on bipod pouch, with bipod. Not needed urgently </li>
     <li>One 2 mag M1911 bianchi magazine pouch M1025</li>
     <li>One Fulton Flashlight stuffed in second M4 Mag pouch. However it is advised to
-        not use the Flashlight so it doesn't get shot out by a BB </li>
+        not use the Flashlight so it doesn't get shot out by a BB unless you are crafty enough to replace
+    the lens with a lexan or other durable material like plexiglass </li>
 
 </ul>
 </main>
@@ -60,7 +61,8 @@
 
 </footer>
 <p>
-&#169; This website is copyrighted by Gabriel Collins, the Author 
+&#169; This website is copyrighted by Gabriel Collins, the Author, for use as a college project. All information
+aside from how the author uses it personally is free information publically availible
 </p>
 
 </html>
