--- a/alice infopage.html
+++ b/alice infopage.html
@@ -38,7 +38,9 @@
 <img src="Pictures/magpouch.jpg" alt="Mag Pouch"> 
 <ul>
     <li>Two magazine pouches with grenade pouches holding three 30 round
-        STANAG magazines each or three airsoft M4 pattern magazines in which case capacity will vary</li>
+        STANAG magazines each or three airsoft M4 pattern magazines in which case capacity will vary
+    Most airsoft grenades will not work in these pouchesunless they are pyrotechnic grenades since they 
+usually are too big and/or cylindrical, they're meant to hold actual fragmentation grenades </li>
     <li>One US M12 Universal Holster with KWA M9 PTP but can also hold an M1911 or most other pistols with a 5 inch barrel</li>
     <li>One butt pack which should be used for sustainment for long events, such as snacks</li>
     <li>One SAW gunners pouch, being used as a dump pouch for spent mags</li>
