update number who knows
i hate coding now lol

--- a/Alicegear/alice infopage.html
+++ b/Alicegear/alice infopage.html
@@ -25,13 +25,15 @@
     United States has been invovled in since 1973 up to the middle of the Great War On Terror or GWOT. 
 
 <hr>
-<nav> <a href=aliceinfopage2.html> How to Use </a></nav>
+<nav> <a href=aliceinfopage2.html> How to setup your own alice rig </a></nav>
 
 <h2>The Author's set up</h2>
 <img src="Pictures/AliceRifle.jpg" width="700" height="300" alt="Author's setup">
 <p>
     This setup is multipurpose as it can be used for both Airsoft and real steel
-    which is jargon for actual firearms, we will be using both interchangably. This is what could be reffered to as a riflemans
+    which is jargon for actual firearms, we will be using both interchangably and when it comes to capacity, we will be using real steel numbers most of the time,
+    due to the fact all airsoft mags are varying in capacity depending on manufacturers and many more factors we will not be getting into. 
+    This is what could be reffered to as a riflemans
     setup at most airsoft fields, or as a typical infantry setup for those it should concern. Starting from left to right, consisting of
 </p>
 
