--- a/Alicegear/aliceinfopage2.html
+++ b/Alicegear/aliceinfopage2.html
@@ -14,18 +14,18 @@
     <p>
         This system is modular for all of you milsimmers out there. Any Alice 
         pouch will fit securely on this system thanks to the slide keepers, which are
-        actually a carry over from the M1956 and M1967 canvas rigs from the vietnam era.
+        actually a carry over from the M1956 canvas and M1967 nylon rigs from the vietnam era.
         Due to this fact, any pouch from the two previous systems will work with Alice
         seamlessly, in fact the butt pack was a carry over from the previous, however is not
-        pictured here. Alice is a nylon, while the other two are a cotton canvas,
-        which while durable traps water when wet and gets heavy, Alice doesn't have
+        pictured here as the 1990's training packs are easier to find and are made of nylon not canvas. Alice is a nylon, while the other two are a cotton canvas,
+        which while durable traps water when wet and gets heavy causing fatigue, Alice doesn't have
         this problem. Another item that will work with alice is the LBV-88 (Load Bearing Vest 88)
         which was designed to improve and use Alice in the 1990's and replace the older Y straps. 
         While you could use this vest by itself, it works better with an Alice belt. The LBV 88 holds
         six M4 pattern magazines and two grenade pouches (if you can afford Pyrotechnic grenades as the Co2
         grenades will not fit) so if you set it up right, you could double your ammunition count, which 
         for milsim events, longer running skirmish games, or just a game that gets extremely hot and contested
-        the more magazines the better. 
+        the more magazines the better, especially at a field allowing full auto fire. 
     </p>
     
     <h2>Alice Clip aka "slide keepers"</h2>
@@ -33,7 +33,7 @@
 
     <p>
 
-        To affix any alice pouch to the LC-2 belt (or older belts like the M1956 or LC-1) do the following
+        To affix any alice pouch to the LC-2 belt (or older belts like the M1956 or M1967) do the following
     <ul>
         <li> slide one Alice Clip into each slot on the back of the pouch with the open end facing away from the pouch. </li>
         <li> slide the clips in the open position until the bottom of the clip can be seen at the bottom of the belt </li>
@@ -47,9 +47,11 @@
     <p> If you decide to use the LBV-88 vest, here are some things you will want to know. Each vest comes with four magazine pouches
         with two on each side. the top pouch can hold two STANAG magazines while the bottom pouch only holds one, leading to a total capacity of six magazines
         plus the one in your weapon, which allows the same 210 round loadout as the Alice but more compacted, but if you keep the 3 mag pouches you can carry even more
-        with 90 rounds per pouch. it also has two grenade/handcuff pouches.
+        with 90 rounds per pouch. it also has two grenade/handcuff pouches. For AEG guns, you would roughly get about 840 shots give or take, but for gas blowback
+        its about the same as real steel in terms of capacity. To use this vest, open the belt loops and place the belt inside them, then close the loops.
+        Once you have done this, adjust the vest and belt to where its comfortable but not too tight that its constricting.
         For simplicitys sake, this can be considered its own piece of Alice equipment. It is only availible in Woodland M81, barring prototypes or aftermarket, however it is advised to
-        only use USGI only!
+        only use USGI only as most aftermarket items are poorly made!
     </p>
 </body>
 <hr>
