--- a/Alicegear/alice infopage.html
+++ b/Alicegear/alice infopage.html
@@ -25,7 +25,7 @@
     United States has been invovled in since 1973 up to the middle of the Great War On Terror or GWOT. 
 
 <hr>
-<nav> <a href=aliceinfopage2.html> How to setup your own alice rig </a></nav>
+<nav> <a href=aliceinfopage2.html> How to setup your own alice rig should you be so inclined </a></nav>
 
 <h2>The Author's set up</h2>
 <img src="Pictures/AliceRifle.jpg" width="700" height="300" alt="Author's setup">
@@ -57,12 +57,13 @@ usually are too big and/or cylindrical, they're meant to hold actual fragmentati
  <hr>
 <footer>
 <h3>Want to learn more? Click the links here.</h3>
- 
-<a href="//en.wikipedia.org/wiki/All-purpose_Lightweight_Individual_Carrying_Equipment"> Alice Basic info</a>
+ <ul>
+
+<li><a href="//en.wikipedia.org/wiki/All-purpose_Lightweight_Individual_Carrying_Equipment"> Alice Basic info</a> </li>
 
 
-<a href="https://www.ccmilitary.com/blogs/resources/a-fasten-ating-story-about-alice-molle"> Alice Extended Info</a>
-
+<li><a href="https://www.ccmilitary.com/blogs/resources/a-fasten-ating-story-about-alice-molle"> Alice Extended Info</a> </li>
+</ul>
 </footer>
 <p>
 &#169; This website is copyrighted by Gabriel Collins, the Author, for use as a college project. All information
