--- a/Alicegear/aliceinfopage2.html
+++ b/Alicegear/aliceinfopage2.html
@@ -57,10 +57,13 @@
 <hr>
 <footer>
     <h3>Learn More here </h3>
+<ul>
+   <li> <a href="alice infopage.html"> Back to the basics </a> </li>
 
-    <a href="https://en.wikipedia.org/wiki/Individual_Integrated_Fighting_System"> LBV-88 Information </a>
+  <li> </nav> <a href="https://en.wikipedia.org/wiki/Individual_Integrated_Fighting_System"> LBV-88 Information </a> </li>
 
-    <a href="https://colemans.com/u-s-g-i-tactical-vest"> Buy your own LBV-88 </a>
+   <li> <a href="https://colemans.com/u-s-g-i-tactical-vest"> Buy your own LBV-88 </a> </li>
+    </ul>
 <p>
     &#169; This website is copyrighted by Gabriel Collins, the Author 
     </p>
