--- a/Alicegear/aliceinfopage2.html
+++ b/Alicegear/aliceinfopage2.html
@@ -6,7 +6,7 @@
     <title> Alice Set Up</title>
     <link rel="stylesheet" href="mystyle.css"> 
 </head>
-
+<nav> <a href="alice infopage.html"> Back to home </a></nav>
 <header><h1>Setting Up Alice LC-2</h1></header>
 <body>
 
