Advanced CSS Update Mk II
changed a few things grammar wise

--- a/Alicegear/alice infopage.html
+++ b/Alicegear/alice infopage.html
@@ -25,7 +25,8 @@
     United States has been invovled in since 1973 up to the middle of the Great War On Terror or GWOT. 
 
 <hr>
-<nav> <a href=aliceinfopage2.html> How to setup your own alice rig should you be so inclined </a></nav>
+<nav> <li> <a href="aliceinfopage2.html"> How to Set Up Alice if you should be so inclined</a></li>
+    <li> <a href="aliceinfopage3.html"> Alice Belt Sizing </a></li></nav>
 
 <h2>The Author's set up</h2>
 <img src="Pictures/AliceRifle.jpg" width="700" height="300" alt="Author's setup">
@@ -33,8 +34,8 @@
     This setup is multipurpose as it can be used for both Airsoft and real steel
     which is jargon for actual firearms, we will be using both interchangably and when it comes to capacity, we will be using real steel numbers most of the time,
     due to the fact all airsoft mags are varying in capacity depending on manufacturers and many more factors we will not be getting into. 
-    This is what could be reffered to as a riflemans
-    setup at most airsoft fields, or as a typical infantry setup for those it should concern. Starting from left to right, consisting of
+    This is what could be reffered to as a riflemans setup at most airsoft fields, or as a typical infantry setup for those it should concern.
+     Starting from left to right, consisting of
 </p>
 
 <img src="Pictures/magpouch.jpg" alt="Mag Pouch"> 
@@ -51,8 +52,13 @@ usually are too big and/or cylindrical, they're meant to hold actual fragmentati
     <li>One Fulton Flashlight stuffed in second M4 Mag pouch. However it is advised to
         not use the Flashlight so it doesn't get shot out by a BB unless you are crafty enough to replace
     the lens with a lexan or other durable material like plexiglass </li>
-
 </ul>
+<p>I have since upgraded to the LBV-88E vest with Alice belt setup but I still retain a basic setup as a backup, and I do switch
+    between the two often. I have used the Alice System in some way since late 2020 when I bought an M12 holster for my KWA
+    beretta, and since then have built out several alice set ups in various setups and configurations to see what works best. 
+    While it may not be the most fashionable and high speed of setups, it is a setup that if it came down to it, I would entrust
+    my own life to this system. 
+</p>
 </main>
  <hr>
 <footer>
@@ -67,7 +73,7 @@ usually are too big and/or cylindrical, they're meant to hold actual fragmentati
 </footer>
 <p>
 &#169; This website is copyrighted by Gabriel Collins, the Author, for use as a college project. All information
-aside from how the author uses it personally is free information publically availible
+aside from how the author uses it personally is free information publically availible and protected under fair use.
 </p>
 
 </html>
