--- a/Alicegear/alice infopage.html
+++ b/Alicegear/alice infopage.html
@@ -17,14 +17,15 @@
 <p>
     All Purpose Lightweight Individual Carrying Equipment or Alice is a
     type of belt and suspenders load bearing equipment used by the United
-    States from 1973 to around 2006 but don't let age fool you, the old girl is still
-    viable option for civilian/militia use. While it may not be the most high spped, or fancy tactical gear 
-    out there, its cost effectiveness and durability makes it a perfect choice for those 
-    on a budget, if you have a lot of people on your team to equip, or are more interested in retro 
+    States Military from 1973 to around 2006 but don't let age fool you, the old girl is still a
+    viable option for civilian/militia use or for airsofters. While it may not be the most high spped, or fancy tactical gear 
+    out there, its cost effectiveness and durability makes it a perfect choice for those on a budget,
+     if you have a lot of people on your team to equip, or are more interested in retro 
     setups like those used in Operation Gothic Serpent (battle of Mogadishu) or literally any conflict the 
     United States has been invovled in since 1973 up to the middle of the Great War On Terror or GWOT. 
 
 <hr>
+
 <nav> <li> <a href="aliceinfopage2.html"> How to Set Up Alice if you should be so inclined</a></li>
     <li> <a href="aliceinfopage3.html"> Alice Belt Sizing </a></li></nav>
 
