--- a/Alicegear/aliceinfopage2.html
+++ b/Alicegear/aliceinfopage2.html
@@ -6,22 +6,29 @@
     <title> Alice Set Up</title>
     <link rel="stylesheet" href="mystyle.css"> 
 </head>
-<nav> <a href="alice infopage.html"> Back to home </a></nav>
-<header><h1>Setting Up Alice LC-2</h1></header>
+
+<header><h1>How to use Alice LC-2</h1></header>
 <body>
 
+    <nav> 
+        <ul>
+        <li> <a href="alice infopage.html"> Back to home</a></li>
+    <li> <a href="aliceinfopage3.html"> Alice Belt Sizing and variations </a></li>
+    </ul>
+    </nav>
 
     <p>
         This system is modular for all of you milsimmers out there. Any Alice 
-        pouch will fit securely on this system thanks to the slide keepers, which are
-        actually a carry over from the M1956 canvas and M1967 nylon rigs from the vietnam era.
+        pouch will fit securely on this system thanks to the slide keepers or "alice clips", which are
+        actually a carry over from the older M1956 canvas and M1967 nylon rigs from the vietnam era.
         Due to this fact, any pouch from the two previous systems will work with Alice
         seamlessly, in fact the butt pack was a carry over from the previous, however is not
-        pictured here as the 1990's training packs are easier to find and are made of nylon not canvas. Alice is a nylon, while the other two are a cotton canvas,
+        pictured here as the 1990's training packs are easier to find, cheaper, and are made of nylon not canvas.
+        Alice is a nylon, while the other two were either Nylon prototypes or canvas material
         which while durable traps water when wet and gets heavy causing fatigue, Alice doesn't have
-        this problem. Another item that will work with alice is the LBV-88 (Load Bearing Vest 88)
+        this problem, unless you're carrying to much. Another item that will work with alice is the LBV-88 (Load Bearing Vest 88)
         which was designed to improve and use Alice in the 1990's and replace the older Y straps. 
-        While you could use this vest by itself, it works better with an Alice belt. The LBV 88 holds
+        While you could use this vest by itself, it works and looks better with an Alice belt. The LBV 88 holds
         six M4 pattern magazines and two grenade pouches (if you can afford Pyrotechnic grenades as the Co2
         grenades will not fit) so if you set it up right, you could double your ammunition count, which 
         for milsim events, longer running skirmish games, or just a game that gets extremely hot and contested
@@ -65,7 +72,8 @@
    <li> <a href="https://colemans.com/u-s-g-i-tactical-vest"> Buy your own LBV-88 </a> </li>
     </ul>
 <p>
-    &#169; This website is copyrighted by Gabriel Collins, the Author 
+    &#169; This website is copyrighted by Gabriel Collins, the Author, for use as a college project. All information
+    aside from how the author uses it personally is free information publically availible and protected under fair use.
     </p>
     </footer>
 </html>
