--- a/Alicegear/alice infopage.html
+++ b/Alicegear/alice infopage.html
@@ -9,7 +9,7 @@
     
 </head>
 <header>
-<h1>The Basics of Alice LC-2 </h1>
+<h1 class="heading1">The Basics of Alice LC-2 </h1>
 </header>
 
 <main>
@@ -26,11 +26,13 @@
 
 <hr>
 
-<nav> <li> <a href="aliceinfopage2.html"> How to Set Up Alice if you should be so inclined</a></li>
-    <li> <a href="aliceinfopage3.html"> Alice Belt Sizing </a></li></nav>
+<nav> <li> <a href="aliceinfopage2.html"> Alice Set Up </a></li>
+      <li> <a href="aliceinfopage3.html"> Belt Sizing </a></li></nav>
 
-<h2>The Author's set up</h2>
+<h2 class="header1">The Author's set up</h2>
+<div id="container">
 <img src="Pictures/AliceRifle.jpg" width="700" height="300" alt="Author's setup">
+</div>
 <p>
     This setup is multipurpose as it can be used for both Airsoft and real steel
     which is jargon for actual firearms, we will be using both interchangably and when it comes to capacity, we will be using real steel numbers most of the time,
@@ -62,8 +64,8 @@ usually are too big and/or cylindrical, they're meant to hold actual fragmentati
 </p>
 </main>
  <hr>
-<footer>
-<h3>Want to learn more? Click the links here.</h3>
+<footer class="footer1">
+<h3 class="header1">Want to learn more? Click the links here.</h3>
  <ul>
 
 <li><a href="//en.wikipedia.org/wiki/All-purpose_Lightweight_Individual_Carrying_Equipment"> Alice Basic info</a> </li>
