--- a/Alicegear/aliceinfopage2.html
+++ b/Alicegear/aliceinfopage2.html
@@ -7,13 +7,13 @@
     <link rel="stylesheet" href="mystyle.css"> 
 </head>
 
-<header><h1>How to use Alice LC-2</h1></header>
+<header><h1 class="header1">How to use Alice LC-2</h1></header>
 <body>
 
     <nav> 
         <ul>
         <li> <a href="alice infopage.html"> Back to home</a></li>
-    <li> <a href="aliceinfopage3.html"> Alice Belt Sizing and variations </a></li>
+    <li> <a href="aliceinfopage3.html"> Belt Sizing </a></li>
     </ul>
     </nav>
 
@@ -35,22 +35,36 @@
         the more magazines the better, especially at a field allowing full auto fire. 
     </p>
     
-    <h2>Alice Clip aka "slide keepers"</h2>
+    <section>
+        <h2 class="header1">Alice Clip aka "slide keepers"</h2>
     <img src="Pictures/AliceClip.jpg" width="300" height="300" alt="Alice Clip">
+<p>Slide Keeper in the open position</p>
+
 
     <p>
-
-        To affix any alice pouch to the LC-2 belt (or older belts like the M1956 or M1967) do the following
-    <ul>
+        To affix any alice pouch to the LC-2 belt (or older belts like the M1956 or M1967) follow these instructions 
+    </p>
+        <p>
+        <ul>
         <li> slide one Alice Clip into each slot on the back of the pouch with the open end facing away from the pouch. </li>
         <li> slide the clips in the open position until the bottom of the clip can be seen at the bottom of the belt </li>
         <li> ensure pouch is in the desired position then push the top part of the clip until it is in the closed position</li>
         <li> check to make sure all pouches are in their proper position, if not repeat from the top. some clips will be bent so they will slide around unless closed</li>
     </ul>
+    Once this is done you must attach your y straps by </p>
+    <img src="Pictures/ystraps.jpg" width="208" height="208" alt="Y Straps">
+    <p>
+    <ul>
+        <li>positioning the front of the Y straps (the open or fork portion) to the eyelets on the magazine pouches</li>
+        <li>attach front portion, the two long sides with the padding facing inward</li>
+        <li>attach the rear of the Y straps (the short end with two hooks close together to the belt or buttpack eyelets</li>
+    </ul>
     </p>
+    </section>
 
-    <h2>LBV-88E Vest</h2>
-<img src="Pictures/LBV88.gif" alt="LBV-88 Vest">
+    
+    <h2 class="header2">LBV-88E Vest</h2>
+<img src="Pictures/LBV88.gif" alt="LBV-88 Vest"> 
     <p> If you decide to use the LBV-88 vest, here are some things you will want to know. Each vest comes with four magazine pouches
         with two on each side. the top pouch can hold two STANAG magazines while the bottom pouch only holds one, leading to a total capacity of six magazines
         plus the one in your weapon, which allows the same 210 round loadout as the Alice but more compacted, but if you keep the 3 mag pouches you can carry even more
@@ -58,11 +72,19 @@
         its about the same as real steel in terms of capacity. To use this vest, open the belt loops and place the belt inside them, then close the loops.
         Once you have done this, adjust the vest and belt to where its comfortable but not too tight that its constricting.
         For simplicitys sake, this can be considered its own piece of Alice equipment. It is only availible in Woodland M81, barring prototypes or aftermarket, however it is advised to
-        only use USGI only as most aftermarket items are poorly made!
-    </p>
+        only use USGI only as most aftermarket items are poorly made! To attach the LBV-88 to the belt 
+        <ul>
+            <li>open all loops at the bottom and place belt inside loops</li>
+            <li>close loops with velcro and snaps</li>
+            <li>adjust loops to desired spacings</li>
+            <li> adjust vest height and width</li>
+        </ul>
+    </p> 
+
+
 </body>
 <hr>
-<footer>
+<footer class="footer1">
     <h3>Learn More here </h3>
 <ul>
    <li> <a href="alice infopage.html"> Back to the basics </a> </li>
