--- a/Alicegear/aliceinfopage3.html
+++ b/Alicegear/aliceinfopage3.html
@@ -9,8 +9,9 @@
     
 </head>
 <body>
-    <div id="container">
-<header><h1>Variations of the equipment belt and which one is right for you?</h1></header>
+   
+<header><h1 class="header1">Variations of the equipment belt and which one is right for you?</h1></header>
+   
 <nav>
 <ul>
 <li> <a href="alice infopage.html"> Back to home</a></li>
@@ -32,7 +33,7 @@
         skimp out on, because if the belt fails, the system will not really work well if at all. I have never had this problem with the 
         LC-3 belts but I have seen it happen with LC-2 belts purely because of how much they were used. 
       </p>
-<h1>LC-1 first generation circa 1970's</h1>
+<h1 class="header1">LC-1 first generation circa 1970's</h1>
 
 <img src="Pictures/BeltLC1.jpg"  alt="First gen belt">
 
@@ -43,7 +44,7 @@ buckle for a belt availible, the material is brass hence the gold color seen in 
 by no means a quick release so if you need to get out of your gear quickly in an emergency, this may prove slightly difficult. However, if 
 you are a re enactor, this makes an excellent choice for a vietnam era kit build as these were issued in the late stages of the war. 
 </p>
-<h2>LC-2 second generation circa 1980's</h2>
+<h2 class="header1">LC-2 second generation circa 1980's</h2>
 
 <img src="Pictures/BeltLC2.jpg" width="200" height="200" alt="Second gen belt">
 
@@ -57,9 +58,9 @@ condition or NOS (New Old Stock) condition and the buckle shows no signs of wear
 but most if not all on the market are well used over decades of service and its tricky to find any in good condition at least this has been
 my own experience as a collector and user of the alice system for four years now. 
 </p>
-<h3> LC-3 Modernized Pistol Belt circa 1990's and turn of the millenium</h3>
+<h3 class="header1"> LC-3 Modernized Pistol Belt circa 1990's and turn of the millenium</h3>
 
-<img src="Pictures/BELTLC3.jpg" alt="third gen belt">
+<img src="Pictures/BELTLC3.jpg" height="200" width= "300" alt="third gen belt">
 
 <p>
 This is the other belt you see when you look up an alice belt. Often called the "bianchi belt" because some 
@@ -75,6 +76,10 @@ but many use LC-3 to distingush the two.
 </p>
 </main>
 <footer>
+
+    <div id="banner">
+        <h3>Legal Disclaimer</h3>
+    </div>
     <p>
         &#169; This website is copyrighted by Gabriel Collins, the Author, for use as a college project. All information
         aside from how the author uses it personally is free information publically availible and protected under fair use.
