--- a/Alicegear/aliceinfopage.html
+++ b/Alicegear/aliceinfopage.html
@@ -26,8 +26,12 @@
 
 <hr>
 
-<nav> <li> <a href="aliceinfopage2.html"> Alice Set Up </a></li>
-      <li> <a href="aliceinfopage3.html"> Belt Sizing </a></li></nav>
+<nav>
+    <ul>
+     <li> <a href="aliceinfopage2.html"> Alice Set Up </a></li>
+      <li> <a href="aliceinfopage3.html"> Belt Sizing </a></li>
+      </ul>
+    </nav>
 
 <h2 class="header1">The Author's set up</h2>
 <div id="container">
