--- a/Alicegear/aliceinfopage.html
+++ b/Alicegear/aliceinfopage.html
@@ -28,8 +28,9 @@
 
 <nav>
     <ul>
-     <li> <a href="aliceinfopage2.html"> Alice Set Up </a></li>
-      <li> <a href="aliceinfopage3.html"> Belt Sizing </a></li>
+    <li><a href="aliceinfopage2.html">Alice Set Up</a></li>
+    <li><a href="aliceinfopage3.html">Belt Sizing</a></li>
+    <li><a href="aliceinfopage4.html">Equipment Overview</a></li>
       </ul>
     </nav>
 
@@ -45,7 +46,7 @@
      Starting from left to right, consisting of
 </p>
 
-<img src="Pictures/magpouch.jpg" alt="Mag Pouch"> 
+<img src="Pictures/magpouchalt.jpg" alt="Mag Pouch"> 
 <ul>
     <li>Two magazine pouches with grenade pouches holding three 30 round
         STANAG magazines each or three airsoft M4 pattern magazines in which case capacity will vary
