--- a/Alicegear/aliceinfopage3.html
+++ b/Alicegear/aliceinfopage3.html
@@ -4,7 +4,7 @@
 
 <head>
     <meta Charset="utf-8">
-    <title> The basics of Alice LC-2 </title>
+    <title> Alice LC-2 Belt Sizing </title>
     <link rel="stylesheet" href="mystyle.css"> 
     
 </head>
@@ -14,8 +14,9 @@
 
 <nav>
 <ul>
-<li> <a href="aliceinfopage.html"> Back to home</a></li>
-<li> <a href="aliceinfopage2.html"> Alice Setup </a></li>
+<li><a href="aliceinfopage.html">Back to home</a></li>
+<li><a href="aliceinfopage2.html">Alice Setup</a></li>
+<li><a href="aliceinfopage4.html">Equipment Overview</a></li>
 </ul>
 </nav>
 <main>
