--- a/Alicegear/aliceinfopage.html
+++ b/Alicegear/aliceinfopage.html
@@ -3,7 +3,7 @@
 
 
 <head>
-    <meta Charset="utf-8">
+    <meta Charset="utf-8" name="viewport" content="width=device-width, initial-scale=1.0">
     <title> The basics of Alice LC-2 </title>
     <link rel="stylesheet" href="mystyle.css"> 
     
