the responsive update

--- a/Alicegear/aliceinfopage2.html
+++ b/Alicegear/aliceinfopage2.html
@@ -8,7 +8,7 @@
 </head>
 
 <header><h1 class="header1">How to use Alice LC-2</h1></header>
-<main id="multi-col">
+
 
     <nav> 
         <ul>
@@ -17,7 +17,7 @@
         <li><a href="aliceinfopage4.html">Equipment Overview</a></li>
     </ul>
     </nav>
-
+<main >
     <p>
         This system is modular for all of you milsimmers out there. Any Alice 
         pouch will fit securely on this system thanks to the slide keepers or "alice clips", which are
@@ -36,10 +36,10 @@
         the more magazines the better, especially at a field allowing full auto fire. 
     </p>
     
-    <section class="col">
+    <section id="multi_col">
         <div class="col">
         <h2 class="header1">Alice Clip aka "slide keepers"</h2>
-    <img src="Pictures/AliceClip.jpg" width="300" height="300" alt="Alice Clip">
+    <img src="Pictures/AliceClipmod.png" width="300" height="300" alt="Alice Clip">
 <p>Slide Keeper in the open position</p>
 
 
@@ -55,7 +55,7 @@
     </ul> 
   
   <p> Once this is done you must attach your y straps by </p>
-    <img src="Pictures/ystraps.jpg" width="208" height="208" alt="Y Straps">
+    <img src="Pictures/ystrapsmod.png" width="208" height="208" alt="Y Straps">
     <p>
     <ul>
         <li>positioning the front of the Y straps (the open or fork portion) to the eyelets on the magazine pouches</li>
