--- a/Alicegear/aliceinfopage3.html
+++ b/Alicegear/aliceinfopage3.html
@@ -36,7 +36,7 @@
       </p>
 <h1 class="header1">LC-1 first generation circa 1970's</h1>
 
-<img src="Pictures/BeltLC1.jpg"  alt="First gen belt">
+<img src="Pictures/lC-1alt.png"  alt="First gen belt">
 
 <p>
 This is the first generation belt, using the same bucle as the M1956 and M1967 belts, which also is based on the even older
@@ -47,7 +47,7 @@ you are a re enactor, this makes an excellent choice for a vietnam era kit build
 </p>
 <h2 class="header1">LC-2 second generation circa 1980's</h2>
 
-<img src="Pictures/BeltLC2.jpg" width="200" height="200" alt="Second gen belt">
+<img src="Pictures/BeltLC2mod.png" width="200" height="200" alt="Second gen belt">
 
 <p>
 When you look up an Alice belt, this will probably be one of the two you see. Designed to be a quick release mechanism
@@ -61,7 +61,7 @@ my own experience as a collector and user of the alice system for four years now
 </p>
 <h3 class="header1"> LC-3 Modernized Pistol Belt circa 1990's and turn of the millenium</h3>
 
-<img src="Pictures/BELTLC3.jpg" height="200" width= "300" alt="third gen belt">
+<img src="Pictures/BELTLC3mod.png" height="200" width= "300" alt="third gen belt">
 
 <p>
 This is the other belt you see when you look up an alice belt. Often called the "bianchi belt" because some 
