--- a/Alicegear/aliceinfopage.html
+++ b/Alicegear/aliceinfopage.html
@@ -3,7 +3,9 @@
 
 
 <head>
-    <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
+    
     <title> The basics of Alice LC-2 </title>
     <link rel="stylesheet" href="mystyle.css"> 
     
