--- a/Alicegear/aliceinfopage4.html
+++ b/Alicegear/aliceinfopage4.html
@@ -3,7 +3,8 @@
 
 
 <head>
-    <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
     <title> LC-2 Equipment</title>
     <link rel="stylesheet" href="mystyle.css"> 
 <body>
